Fix custom command file validation.